--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>Jeevan-Rai</title>
   </head>
   <body>
-    <h1>Me Jeev</h1>
+    <div class="alert alert-primary" role="alert">
+        Hello
+      </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
