--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- main css -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Arter</title>
+  <title>Jeevan P Rai</title>
 </head>
 
 <body>
@@ -988,9 +988,9 @@
                 <!-- footer -->
                 <footer>
                   <!-- copyright -->
-                  <div class="art-copy">© 2021 Artur Carter</div>
+                  <div class="art-copy">© 2022 Jeevan P Rai</div>
                   <!-- author ( Please! Do not delete it. You are awesome! :) -->
-                  <div>Template author:&#160; <a href="https://themeforest.net/user/millerdigitaldesign" target="_blank" data-no-swup>Nazar Miller</a></div>
+                  <!-- <div>Template author:&#160; <a href="https://themeforest.net/user/millerdigitaldesign" target="_blank" data-no-swup>Nazar Miller</a></div> -->
                 </footer>
                 <!-- footer end -->
 
