--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
       <!-- preloader content -->
       <div class="art-preloader-content">
         <!-- title -->
-        <h4>Artur Carter</h4>
+        <h4>Jeevan P Rai</h4>
         <!-- progressbar -->
         <div id="preloader" class="art-preloader-load"></div>
       </div>
