--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <!-- name -->
               <h5 class="art-name mb-10"><a href="index.html">Jeevan P Rai</a></h5>
               <!-- post -->
-              <div class="art-sm-text">Enthusiastic Programmer 👨‍💻<br> Web/App developer, </div>
+              <div class="art-sm-text">Enthusiastic Programmer 👨‍💻<br> Web/App developer, Problem Solver </div>
             </div>
             <!-- info bar header end -->
 
