--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="art-lang-skills-item">
                   <div id="circleprog1" class="art-cirkle-progress"></div>
                   <!-- title -->
-                  <h6>French</h6>
+                  <h6>Kannada</h6>
                 </div>
                 <!-- skill end -->
 
@@ -128,7 +128,7 @@
                 <div class="art-lang-skills-item">
                   <div id="circleprog3" class="art-cirkle-progress"></div>
                   <!-- title -->
-                  <h6>Spanish</h6>
+                  <h6>Hindi</h6>
                 </div>
                 <!-- skill end -->
 
