--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                       <!-- counter -->
                       <div class="art-counter-box">
                         <!-- counter number -->
-                        <span class="art-counter">143</span>
+                        <span class="art-counter">14</span>
                       </div>
                       <!-- counter end -->
                       <!-- title -->
@@ -399,22 +399,36 @@
                   <!-- col end -->
 
                   <!-- col -->
-                  <div class="col-md-3 col-6">
+
+
+
+                  <!-- Awards -->
+
+
+
+                  <!-- <div class="col-md-3 col-6"> -->
 
                     <!-- couner frame -->
-                    <div class="art-counter-frame">
+                    <!-- <div class="art-counter-frame"> -->
                       <!-- counter -->
-                      <div class="art-counter-box">
+                      <!-- <div class="art-counter-box"> -->
                         <!-- counter number -->
-                        <span class="art-counter">20</span><span class="art-counter-plus">+</span>
-                      </div>
+                        <!-- <span class="art-counter">20</span><span class="art-counter-plus">+</span> -->
+                      <!-- </div> -->
                       <!-- counter end -->
                       <!-- title -->
-                      <h6>Honors and Awards</h6>
-                    </div>
+                      <!-- <h6>Honors and Awards</h6> -->
+                    <!-- </div> -->
                     <!-- couner frame end -->
 
-                  </div>
+
+                    
+                    <!-- Awards section end -->
+
+
+
+
+                  <!-- </div> -->
                   <!-- col end -->
 
                 </div>
