--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div class="art-hard-skills-item">
                   <div class="art-skill-heading">
                     <!-- title -->
-                    <h6>Wordpress</h6>
+                    <h6>Python</h6>
                   </div>
                   <!-- progressbar frame -->
                   <div class="art-line-progress">
