--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                 <!-- container end -->
 
                 <!-- container -->
-                <div class="container-fluid" style="margin-left: 20%;">
+                <div class="container-fluid" >
                   <p align="left"> <a href="https://developer.android.com" target="_blank" rel="noreferrer"> <img
                         src="https://raw.githubusercontent.com/devicons/devicon/master/icons/android/android-original-wordmark.svg"
                         alt="android" width="40" height="40" /> </a>&emsp;&emsp;&emsp; <a href="https://www.arduino.cc/"
