--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <div class="art-curtain"></div>
 
           <!-- top background -->
-          <div class="art-top-bg" style="background-image: url(img/bg.jpg)">
+          <div class="art-top-bg" style="background-image: url(img/bg1.png)">
             <!-- overlay -->
             <div class="art-top-bg-overlay"></div>
             <!-- overlay end -->
@@ -286,7 +286,7 @@
                   <div class="col-lg-12">
 
                     <!-- banner -->
-                    <div class="art-a art-banner" style="background-image: url(img/bg.jpg)">
+                    <div class="art-a art-banner" style="background-image: url(img/bg1.png)">
                       <!-- banner back -->
                       <div class="art-banner-back"></div>
                       <!-- banner dec -->
