--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               <div class="art-links-frame p-15-15">
 
                 <!-- download cv button -->
-                <a href="files/cv.txt" class="art-link" download data-no-swup>Download cv <i
+                <a href="/files/Jeevan P Rai.pdf" class="art-link" download data-no-swup>Download Resume <i
                     class="fas fa-download"></i></a>
 
               </div>
