--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <meta name="theme-color" content="#2B2B35">
   <!-- favicon  -->
   <!-- <link rel="shortcut icon" href="img/thumbnail.ico" type="image/x-icon"> -->
+  <link href="/img/face-1.jpg" rel="icon">
+  <link href="/img/face-1.jpg" rel="apple-touch-icon">
   <!-- bootstrap css -->
   <link rel="stylesheet" href="css/plugins/bootstrap.min.css">
   <!-- font awesome css -->
@@ -286,7 +288,7 @@
                   <div class="col-lg-12">
 
                     <!-- banner -->
-                    <div class="art-a art-banner" style="background-image: url(img/bg1.png)">
+                    <div class="art-a art-banner" style="background-image: url(img/banner.png)">
                       <!-- banner back -->
                       <div class="art-banner-back"></div>
                       <!-- banner dec -->
@@ -434,7 +436,7 @@
                         <!-- title frame -->
                         <div class="art-title-frame">
                           <!-- title -->
-                          <h4>My Skills</h4>
+                          <h3>Skills</h3>
                         </div>
                         <!-- title frame end -->
                       </div>
@@ -543,67 +545,61 @@
 
                 <!-- container -->
                 <div class="container-fluid" >
-                  <p align="left"> <a href="https://developer.android.com" target="_blank" rel="noreferrer"> <img
+                  <h3>Languages and Tools:</h3><br>
+          <center>        <p> <a href="https://developer.android.com" target="_blank" rel="noreferrer"> <img
                         src="https://raw.githubusercontent.com/devicons/devicon/master/icons/android/android-original-wordmark.svg"
-                        alt="android" width="40" height="40" /> </a>&emsp;&emsp;&emsp; <a href="https://www.arduino.cc/"
-                      target="_blank" rel="noreferrer"> <img src="https://cdn.worldvectorlogo.com/logos/arduino-1.svg"
-                        alt="arduino" width="40" height="40" /> </a>&emsp;&emsp;&emsp; <a
-                      href="https://getbootstrap.com" target="_blank" rel="noreferrer"> <img
+                        alt="android" width="40" height="40" style="margin:2.25%" /> </a> <a href="https://www.arduino.cc/"
+                      target="_blank" rel="noreferrer"> <img src="https://cdn.worldvectorlogo.com/logos/arduino-1.svg" alt="arduino"
+                        width="40" height="40" style="margin:2.25%" /> </a> <a href="https://getbootstrap.com" target="_blank"
+                      rel="noreferrer"> <img
                         src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg"
-                        alt="bootstrap" width="40" height="40" /> </a>&emsp;&emsp;&emsp;<a
-                      href="https://www.cprogramming.com/" target="_blank" rel="noreferrer"> <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c"
-                        width="40" height="40" /> </a>&emsp;&emsp;&emsp; <a href="https://www.w3schools.com/cpp/"
+                        alt="bootstrap" width="40" height="40" style="margin:2.25%" /> </a><a href="https://www.cprogramming.com/"
                       target="_blank" rel="noreferrer"> <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-original.svg"
-                        alt="cplusplus" width="40" height="40" /> </a>&emsp;&emsp;&emsp; <a
-                      href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer"> <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg"
-                        alt="css3" width="40" height="40" /> </a>&emsp;&emsp;&emsp; <a
-                      href="https://www.djangoproject.com/" target="_blank" rel="noreferrer"> <img
-                        src="https://cdn.worldvectorlogo.com/logos/django.svg" alt="django" width="40" height="40" />
-                    </a><br><br> <a href="https://flask.palletsprojects.com/" target="_blank" rel="noreferrer"> <img
-                        src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-icon.svg" alt="flask" width="40"
-                        height="40" /> </a> &emsp;&emsp;&emsp; <a href="https://git-scm.com/" target="_blank"
-                      rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git"
-                        width="40" height="40" /> </a> &emsp;&emsp;&emsp; <a href="https://www.w3.org/html/"
+                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c" width="40"
+                        height="40" style="margin:2.25%" /> </a><a href="https://www.w3schools.com/cpp/" target="_blank" rel="noreferrer">
+                      <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-original.svg"
+                        alt="cplusplus" width="40" height="40" style="margin:2.25%" /> </a> <a href="https://www.w3schools.com/css/"
                       target="_blank" rel="noreferrer"> <img
+                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3"
+                        width="40" height="40" style="margin:2.25%" /> </a> <a href="https://www.djangoproject.com/" target="_blank"
+                      rel="noreferrer"> <img src="https://cdn.worldvectorlogo.com/logos/django.svg" alt="django" width="40" height="40"
+                        style="margin:2.25%" /> </a> <a href="https://flask.palletsprojects.com/" target="_blank" rel="noreferrer"> <img
+                        src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-icon.svg" alt="flask" width="40" height="40"
+                        style="margin:2.25%" /> </a> <a href="https://git-scm.com/" target="_blank" rel="noreferrer"> <img
+                        src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"
+                        style="margin:2.25%" /> </a> <a href="https://www.w3.org/html/" target="_blank" rel="noreferrer"> <img
                         src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"
-                        alt="html5" width="40" height="40" /> </a> &emsp;&emsp;&emsp; <a href="https://www.java.com"
-                      target="_blank" rel="noreferrer"> <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original.svg"
-                        alt="java" width="40" height="40" /> </a> &emsp;&emsp;&emsp; <a
-                      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer">
-                      <img
+                        alt="html5" width="40" height="40" style="margin:2.25%" /> </a> <a href="https://www.java.com" target="_blank"
+                      rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original.svg"
+                        alt="java" width="40" height="40" style="margin:2.25%" /> </a><a
+                      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer"> <img
                         src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
-                        alt="javascript" width="40" height="40" /> </a>&emsp;&emsp;&emsp; <a
-                      href="https://www.linux.org/" target="_blank" rel="noreferrer"> <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg"
-                        alt="linux" width="40" height="40" /> </a>&emsp;&emsp;&emsp; <a href="https://www.mysql.com/"
+                        alt="javascript" width="40" height="40" style="margin:2.25%" /> </a><a href="https://www.linux.org/"
                       target="_blank" rel="noreferrer"> <img
+                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" alt="linux"
+                        width="40" height="40" style="margin:2.25%" /> </a><a href="https://www.mysql.com/" target="_blank"
+                      rel="noreferrer"> <img
                         src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original-wordmark.svg"
-                        alt="mysql" width="40" height="40" /> </a><br><br> <a href="https://www.nginx.com"
-                      target="_blank" rel="noreferrer"> <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nginx/nginx-original.svg"
-                        alt="nginx" width="40" height="40" /> </a> &emsp;&emsp;&emsp; <a
-                      href="https://pandas.pydata.org/" target="_blank" rel="noreferrer"> <img
+                        alt="mysql" width="40" height="40" style="margin:2.25%" /> </a><a href="https://www.nginx.com" target="_blank"
+                      rel="noreferrer"> <img
+                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nginx/nginx-original.svg" alt="nginx"
+                        width="40" height="40" style="margin:2.25%" /> </a><a href="https://pandas.pydata.org/" target="_blank"
+                      rel="noreferrer"> <img
                         src="https://raw.githubusercontent.com/devicons/devicon/2ae2a900d2f041da66e950e4d48052658d850630/icons/pandas/pandas-original.svg"
-                        alt="pandas" width="40" height="40" /> </a> &emsp;&emsp;&emsp; <a
-                      href="https://www.photoshop.com/en" target="_blank" rel="noreferrer"> <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/photoshop/photoshop-line.svg"
-                        alt="photoshop" width="40" height="40" /> </a> &emsp;&emsp;&emsp; <a href="https://www.php.net"
+                        alt="pandas" width="40" height="40" style="margin:2.25%" /> </a> <a href="https://www.photoshop.com/en"
                       target="_blank" rel="noreferrer"> <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg"
-                        alt="php" width="40" height="40" /> </a> &emsp;&emsp;&emsp; <a href="https://www.python.org"
-                      target="_blank" rel="noreferrer"> <img
-                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"
-                        alt="python" width="40" height="40" /> </a>&emsp;&emsp;&emsp; <a
-                      href="https://www.tensorflow.org" target="_blank" rel="noreferrer"> <img
-                        src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-icon.svg" alt="tensorflow"
-                        width="40" height="40" /> </a> &emsp;&emsp;&emsp; <a href="https://unrealengine.com/"
-                      target="_blank" rel="noreferrer"> <img
+                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/photoshop/photoshop-line.svg" alt="photoshop"
+                        width="40" height="40" style="margin:2.25%" /> </a> <a href="https://www.php.net" target="_blank"
+                      rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg"
+                        alt="php" width="40" height="40" style="margin:2.25%" /> </a> <a href="https://www.python.org" target="_blank"
+                      rel="noreferrer"> <img
+                        src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python"
+                        width="40" height="40" style="margin:2.25%" /> </a> <a href="https://www.tensorflow.org" target="_blank"
+                      rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-icon.svg" alt="tensorflow"
+                        width="40" height="40" style="margin:2.25%" /> </a> <a href="https://unrealengine.com/" target="_blank"
+                      rel="noreferrer"> <img
                         src="https://raw.githubusercontent.com/kenangundogan/fontisto/036b7eca71aab1bef8e6a0518f7329f13ed62f6b/icons/svg/brand/unreal-engine.svg"
-                        alt="unreal" width="40" height="40" /> </a> </p>
+                        alt="unreal" width="40" height="40" style="margin:2.25%" /> </a> </p> </center>
                   <!-- container end -->
                 </div>
                 <!-- container -->
