--- a/contact.html
+++ b/contact.html
@@ -312,7 +312,7 @@
                           </li>
 
                           <li>
-                            <h6>Streat:</h6><span>Sullia</span>
+                            <h6>zip:</h6><span>574239</span>
                           </li>
                         </ul>
                       </div>
@@ -397,7 +397,7 @@
                         <!-- form field end -->
                         <!-- button -->
                         <div class="art-submit-frame">
-                          <button class="art-btn art-btn-md art-submit" type="submit"><span>Send message</span></button>
+                          <button class="art-btn art-btn-md art-submit" type="submit" disabled><span>Send message</span></button>
                           <!-- success -->
                           <div class="art-success">Success <i class="fas fa-check"></i></div>
                         </div>
