--- a/contact.html
+++ b/contact.html
@@ -88,11 +88,12 @@
                 <ul>
                   <!-- country -->
                   <li>
-                    <h6>Residence:</h6><span>India</span>
-                  </li>
+                    <h6>Available for freelance</h6><span></span></a>
+                  </li><br>
                   <!-- city -->
                   <li>
-                    <h6>City:</h6><span>Sullia</span>
+                    <h6>City:</h6><a href="#"
+                      onclick='window.open("https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31155.089505749143!2d75.37175197126926!3d12.556767682245885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba4f25fa71fbef1%3A0xb36c625679d164cf!2sSullia%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1659200676934!5m2!1sen!2sin");return false;'><span>Sullia</span></a>
                   </li>
                   <!-- age -->
                   <li>
