--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,9 @@
 
 
 <!-- Mirrored from elanta.app/nazar/arter-demo-new/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 May 2022 09:20:26 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -391,14 +393,16 @@
                         <!-- form field -->
                         <div class="art-form-field">
                           <!-- message textarea -->
-                          <textarea id="message" name="text" class="art-input" placeholder="Message" required></textarea>
+                          <textarea id="message" name="text" class="art-input" placeholder="Message"
+                            required></textarea>
                           <!-- label -->
                           <label for="message"><i class="far fa-envelope"></i></label>
                         </div>
                         <!-- form field end -->
                         <!-- button -->
                         <div class="art-submit-frame">
-                          <button class="art-btn art-btn-md art-submit" type="submit" disabled><span>Send message</span></button>
+                          <button class="art-btn art-btn-md art-submit" type="submit" disabled><span>Send
+                              message</span></button>
                           <!-- success -->
                           <div class="art-success">Success <i class="fas fa-check"></i></div>
                         </div>
@@ -418,7 +422,7 @@
               <!-- container end -->
 
               <!-- container -->
-              
+
 
 
 
@@ -479,23 +483,23 @@
                   <li class="menu-item"><a href="index.html">Home</a></li>
                   <!-- menu item -->
                   <!-- <li class="menu-item menu-item-has-children"> -->
-                    <!-- <a href="#." data-no-swup>Portfolio</a> -->
-                    <!-- sub menu -->
-                    <!-- <ul class="sub-menu"> -->
-                      <!-- lvl 2 nav link -->
-                      <!-- <li class="menu-item"><a href="portfolio-2-col.html">2 column</a></li> -->
-                      <!-- lvl 2 nav link -->
-                      <!-- <li class="menu-item"><a href="portfolio-3-col.html">3 column</a></li> -->
-                      <!-- lvl 2 nav link -->
-                      <!-- <li class="menu-item"><a href="portfolio-2-col-masonry.html">2 column masonry</a></li> -->
-                      <!-- lvl 2 nav link -->
-                      <!-- <li class="menu-item"><a href="portfolio-3-col-masonry.html">3 column masonry</a></li> -->
-                      <!-- lvl 2 nav link -->
-                      <!-- <li class="menu-item"><a href="portfolio-single.html">Single project</a></li> -->
-                      <!-- lvl 2 nav link -->
-                      <!-- <li class="menu-item"><a href="portfolio-single-2.html">Single project 2</a></li> -->
-                    <!-- </ul> -->
-                    <!-- sub menu end -->
+                  <!-- <a href="#." data-no-swup>Portfolio</a> -->
+                  <!-- sub menu -->
+                  <!-- <ul class="sub-menu"> -->
+                  <!-- lvl 2 nav link -->
+                  <!-- <li class="menu-item"><a href="portfolio-2-col.html">2 column</a></li> -->
+                  <!-- lvl 2 nav link -->
+                  <!-- <li class="menu-item"><a href="portfolio-3-col.html">3 column</a></li> -->
+                  <!-- lvl 2 nav link -->
+                  <!-- <li class="menu-item"><a href="portfolio-2-col-masonry.html">2 column masonry</a></li> -->
+                  <!-- lvl 2 nav link -->
+                  <!-- <li class="menu-item"><a href="portfolio-3-col-masonry.html">3 column masonry</a></li> -->
+                  <!-- lvl 2 nav link -->
+                  <!-- <li class="menu-item"><a href="portfolio-single.html">Single project</a></li> -->
+                  <!-- lvl 2 nav link -->
+                  <!-- <li class="menu-item"><a href="portfolio-single-2.html">Single project 2</a></li> -->
+                  <!-- </ul> -->
+                  <!-- sub menu end -->
                   <!-- </li> -->
                   <!-- menu item -->
                   <!-- <li class="menu-item"><a href="history.html">History</a></li> -->
@@ -503,17 +507,17 @@
                   <li class="menu-item current-menu-item"><a href="contact.html">Contact</a></li>
                   <!-- menu item -->
                   <!-- <li class="menu-item menu-item-has-children"> -->
-                    <!-- <a href="#." data-no-swup>Blog</a> -->
-                    <!-- sub menu -->
-                    <!-- <ul class="sub-menu"> -->
-                      <!-- lvl 2 nav link -->
-                      <!-- <li class="menu-item"><a href="blog-2-col.html">2 column</a></li> -->
-                      <!-- lvl 2 nav link -->
-                      <!-- <li class="menu-item"><a href="blog-3-col.html">3 column</a></li> -->
-                      <!-- lvl 2 nav link -->
-                      <!-- <li class="menu-item"><a href="blog-post.html">Publication</a></li> -->
-                    <!-- </ul> -->
-                    <!-- sub menu end -->
+                  <!-- <a href="#." data-no-swup>Blog</a> -->
+                  <!-- sub menu -->
+                  <!-- <ul class="sub-menu"> -->
+                  <!-- lvl 2 nav link -->
+                  <!-- <li class="menu-item"><a href="blog-2-col.html">2 column</a></li> -->
+                  <!-- lvl 2 nav link -->
+                  <!-- <li class="menu-item"><a href="blog-3-col.html">3 column</a></li> -->
+                  <!-- lvl 2 nav link -->
+                  <!-- <li class="menu-item"><a href="blog-post.html">Publication</a></li> -->
+                  <!-- </ul> -->
+                  <!-- sub menu end -->
                   <!-- </li> -->
                   <!-- menu item -->
                   <!-- <li class="menu-item"><a href="onepage.html" target="_blank" data-no-swup>Onepage</a></li> -->
@@ -590,4 +594,5 @@
 
 
 <!-- Mirrored from elanta.app/nazar/arter-demo-new/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 May 2022 09:20:26 GMT -->
+
 </html>
