content updated and files sorted

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
   <meta name="theme-color" content="#2B2B35">
   <!-- favicon  -->
   <!-- <link rel="shortcut icon" href="img/thumbnail.ico" type="image/x-icon"> -->
+    <link href="/img/face-1.jpg" rel="icon">
+    <link href="/img/face-1.jpg" rel="apple-touch-icon">
   <!-- bootstrap css -->
   <link rel="stylesheet" href="css/plugins/bootstrap.min.css">
   <!-- font awesome css -->
@@ -280,7 +282,7 @@
             <div id="scrollbar" class="art-scroll-frame">
 
               <!-- container -->
-              <div class="container-fluid">
+              <div class="container-fluid" style="width: 100%;">
 
                 <!-- row -->
                 <div class="row p-30-0">
@@ -323,37 +325,7 @@
                     <!-- contact card end -->
                   </div>
                   <!-- col end -->
-                  <!-- col -->
-                  <div class="col-12 col-xl-4">
-                    <!-- contact card -->
-                    <div class="art-a art-card">
-                      <div class="art-table p-15-15">
-                        <ul>
-                          <li>
-                            <h6>Email:</h6><span>jeevanraisonangeri@gmail.com</span>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                    <!-- contact card end -->
-                  </div>
-                  <!-- col end -->
-                  <!-- col -->
-                  <div class="col-12 col-xl-4">
-                    <!-- contact card -->
-                    <div class="art-a art-card">
-                      <div class="art-table p-15-15">
-                        <ul>
-                          <li>
-                            <h6>Phone :</h6><span>+91 7618752850</span>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                    <!-- contact card end -->
-
-                  </div>
-                  <!-- col end -->
+                  
 
                   <!-- col -->
                   <div class="col-lg-12">
@@ -363,54 +335,12 @@
                       <!-- title frame -->
                       <div class="art-title-frame">
                         <!-- title -->
-                        <h4>Get in touch</h4>
+                        <!-- <h4>Get in touch</h4> -->
                       </div>
                       <!-- title frame end -->
                     </div>
                     <!-- section title end -->
 
-                    <!-- contact form frame -->
-                    <div class="art-a art-card">
-
-                      <!-- contact form -->
-                      <form id="form" class="art-contact-form">
-                        <!-- form field -->
-                        <div class="art-form-field">
-                          <!-- name input -->
-                          <input id="name" name="name" class="art-input" type="text" placeholder="Name" required>
-                          <!-- label -->
-                          <label for="name"><i class="fas fa-user"></i></label>
-                        </div>
-                        <!-- form field end -->
-                        <!-- form field -->
-                        <div class="art-form-field">
-                          <!-- email input -->
-                          <input id="email" name="email" class="art-input" type="email" placeholder="Email" required>
-                          <!-- label -->
-                          <label for="email"><i class="fas fa-at"></i></label>
-                        </div>
-                        <!-- form field end -->
-                        <!-- form field -->
-                        <div class="art-form-field">
-                          <!-- message textarea -->
-                          <textarea id="message" name="text" class="art-input" placeholder="Message"
-                            required></textarea>
-                          <!-- label -->
-                          <label for="message"><i class="far fa-envelope"></i></label>
-                        </div>
-                        <!-- form field end -->
-                        <!-- button -->
-                        <div class="art-submit-frame">
-                          <button class="art-btn art-btn-md art-submit" type="submit" disabled><span>Send
-                              message</span></button>
-                          <!-- success -->
-                          <div class="art-success">Success <i class="fas fa-check"></i></div>
-                        </div>
-                      </form>
-                      <!-- contact form end -->
-
-                    </div>
-                    <!-- contact form frame end -->
 
                   </div>
                   <!-- col end -->
@@ -420,7 +350,7 @@
 
               </div>
               <!-- container end -->
-
+              
               <!-- container -->
 
 
@@ -432,7 +362,17 @@
               <div class="container-fluid">
 
                 <!-- footer -->
-                <footer>
+                <style>
+                  footer{
+                  margin-top: 32%;
+                  }
+                  @media (max-width:920px){
+                    footer { 
+                      margin-top: 30%;
+                    }
+                  }
+                </style>
+                <footer style="">
                   <!-- copyright -->
                   <div class="art-copy" style="margin-left: 40%;">© 2022 Jeevan P Rai</div>
 
