--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                         <!-- counter -->
                         <div class="art-counter-box">
                           <!-- counter number -->
-                          <span class="art-counter">10+</span>
+                          <span class="art-counter">14</span>
                         </div>
                         <!-- counter end -->
                         <!-- title -->
