--- a/index.html
+++ b/index.html
@@ -647,7 +647,18 @@
                   <h3>Resume</h3>
                 </center><br>
                 <div class="art-ls-divider"></div><br>
-                <h4 style="text-align: justify;">"&nbsp;&nbsp;&nbsp;&nbsp;I am an enthusiastic programmer, deeply interested in programming, web/app development and problem
+                <style>
+                  .about {
+                    text-align: justify;
+
+                    @media screen and (max-width:400px) {
+                      .about {
+                      text-align: center;
+                      }
+                    }
+                  }
+                </style>
+                <h4 style="text-align: justify;" class="about">"&nbsp;&nbsp;&nbsp;&nbsp;I am an enthusiastic programmer, deeply interested in programming, web/app development and problem
                   solving. Curious in assimilating new ideas efficiently. Longing to accord to the future of tech 'The
                   Metaverse'. "</h4>
                 <br>
