linked in URL fixed

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <!-- sidebar social -->
             <div class="art-ls-social">
               <!-- social link -->
-              <a href="#" onclick='window.open("https://linkedin.com/in/jeevan-rai-51520921b");return false;'><i
+              <a href="#" onclick='window.open("https://linkedin.com/in/jeevanprai");return false;'><i
                   class="fab fa-linkedin-in"></i></a>
               <!-- social link -->
               <!-- <a href="#." target="_blank"><i class="fab fa-dribbble"></i></a> -->
@@ -999,7 +999,7 @@
               <!-- End social -->
               <div class="art-ls-social" style="font-size: 30px;">
                 <!-- social link -->
-                <a href="#" onclick='window.open("https://linkedin.com/in/jeevan-rai-51520921b");return false;'><i
+                <a href="#" onclick='window.open("https://linkedin.com/in/jeevanprai");return false;'><i
                     class="fab fa-linkedin-in"></i></a>&nbsp;&nbsp;&nbsp;
                     <!-- social link -->
                 <a href="#" onclick='window.open("https://github.com/Jeevan-Rai/");return false;'><i class="fab fa-github"></i></a>&nbsp;&nbsp;&nbsp;
