--- a/index.html
+++ b/index.html
@@ -693,8 +693,8 @@
                           <div class="art-a art-timeline-content">
                             <div class="art-card-header">
                               <div class="art-left-side">
-                                <h5>WEB DEVELOPMENT INTERN
-                                  ANASOFT SULLIA, INDIA</h5>
+                                <h5>WEB/APP DEVELOPMENT INTERN
+                                ANASOFT SULLIA, INDIA</h5>
                                 <div class="art-el-suptitle mb-15"></div>
                               </div>
                               <div class="art-right-side">
