--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                           <div class="art-a art-timeline-content">
                             <div class="art-card-header">
                               <div class="art-left-side">
-                                <h5>BUILT AN EXAMINATION PORTAL FOR KVG COLLEGE OF ENGINEERING</h5>
+                                <a href="#" onclick='window.open("https://github.com/Jeevan-Rai/Exam-Website.git");return false;'><h5>BUILT AN EXAMINATION PORTAL FOR KVG COLLEGE OF ENGINEERING</h5></a>
                                 <!-- <div class="art-el-suptitle mb-15">Template author</div> -->
                               </div>
                               <div class="art-right-side"><br>
