--- a/index.html
+++ b/index.html
@@ -705,8 +705,19 @@
                             <ul>
                               <li>
                                 <p>
-                                  Presently working on a PHP-based web application for
-                                  KVG College of Engineering. Expected Aug 2022.
+                                  Presently working on Android application for KVG
+                                  AJPUC, Sullia. Expected - Mar 2023.
+                                </p>
+                              </li>
+                              <li>
+                                <p>
+                                  Developed a web-based school/college automation
+                                  system for KVG AJPUC and KVG IPS, Sullia. Nov-2022.
+                                </p>
+                              </li>
+                              <li>
+                                <p>
+                                  Contributed to blog website for <a href="#" onclick='window.open("http://kvgengg.com/");return false;'>KVG College of Engineering</a>
                                 </p>
                               </li>
                               <li>
