--- a/index.html
+++ b/index.html
@@ -659,9 +659,9 @@
                   }
                 </style>
                 <h4 style="text-align: justify;" class="about">"&nbsp;&nbsp;&nbsp;&nbsp;I am an enthusiastic programmer,
-                  deeply interested in programming, web/app development, and problemsolving. Curious about assimilating
-                  new ideas efficiently and longing to accord to the future of tech, "The
-                  Metaverse"."</h4>
+                  deeply interested in programming, web/app development, and problem solving. Curious about assimilating
+                  new ideas efficiently and longing to accord to the future of tech, 'The
+                  Metaverse'.&nbsp;&nbsp;&nbsp;&nbsp;"</h4>
                 <br>
                 <div class="art-ls-divider"></div>
                 <br>
@@ -777,7 +777,7 @@
                                 <div class="art-el-suptitle mb-15"></div>
                               </div>
                               <div class="art-right-side">
-                                <span class="art-date">2017 - 2019</span>
+                                <span class="art-date">2019</span>
                               </div>
                             </div>
                             <!-- <ul>
@@ -885,6 +885,8 @@
                             </ul>
                           </div>
                         </div>
+
+                        
 
                         <div class="art-timeline-item">
                           <div class="art-timeline-mark-light"></div>
