--- a/index.html
+++ b/index.html
@@ -709,6 +709,43 @@
                           <div class="art-a art-timeline-content">
                             <div class="art-card-header">
                               <div class="art-left-side">
+                                <h5>Software Engineer
+                                Tayana Mobility Technologies</h5>
+                                <div class="art-el-suptitle mb-15"></div>
+                              </div>
+                              <div class="art-right-side">
+                                <!-- <span class="art-date">jan 2018 - may 2020</span> -->
+                              </div>
+                            </div>
+                            <ul>
+                              <li>
+                                <p>
+                                  Currently working as Software Engineer at Tayana
+                                  Mobility Technologies, Bangalore.
+                                </p>
+                              </li>
+                              <li>
+                                <p>
+                                  Being a Software developer I'm contributing to the new
+                                  Product requirements from the clients.
+                                </p>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+
+                      </div>
+                      <!-- timeline end -->
+
+                      <!-- timeline -->
+                      <div class="art-timeline art-gallery" id="history">
+                        <div class="art-timeline-item">
+                          <div class="art-timeline-mark-light"></div>
+                          <div class="art-timeline-mark"></div>
+                      
+                          <div class="art-a art-timeline-content">
+                            <div class="art-card-header">
+                              <div class="art-left-side">
                                 <h5>WEB/APP DEVELOPMENT INTERN
                                   ANASOFT SULLIA, INDIA</h5>
                                 <div class="art-el-suptitle mb-15"></div>
@@ -720,8 +757,8 @@
                             <ul>
                               <li>
                                 <p>
-                                  Presently working on Android application for KVG
-                                  AJPUC, Sullia. Expected - Mar 2023.
+                                  Worked on Android application for KVG
+                                  AJPUC, Sullia. - Mar 2023.
                                 </p>
                               </li>
                               <li>
@@ -732,13 +769,14 @@
                               </li>
                               <li>
                                 <p>
-                                  Contributed to blog website for <a href="#" onclick='window.open("http://kvgengg.com/");return false;'>KVG College of Engineering</a>
+                                  Contributed to blog website for <a href="#" onclick='window.open("http://kvgengg.com/");return false;'>KVG
+                                    College of Engineering</a>
                                 </p>
                               </li>
                               <li>
                                 <p>
-                                  Developed a website for <a href="#"
-                                    onclick='window.open("http://madhurihoney.com/");return false;'>Madhuri Honey</a>
+                                  Developed a website for <a href="#" onclick='window.open("http://madhurihoney.com/");return false;'>Madhuri
+                                    Honey</a>
                                   and worked on
                                   an E-commerce platform for the same as per the
                                   requirements of the client.
@@ -754,83 +792,7 @@
                             </ul>
                           </div>
                         </div>
-                        <h4>Education</h4><br>
-                        <!-- timeline item start -->
-                        <div class="art-timeline-item">
-                          <div class="art-timeline-mark-light"></div>
-                          <div class="art-timeline-mark"></div>
-
-                          <div class="art-a art-timeline-content">
-                            <div class="art-card-header">
-                              <div class="art-left-side">
-                                <h5>COMPUTER SCIENCE & ENGINEERING</h5>
-                                <div class="art-el-suptitle mb-15"></div>
-                              </div>
-                              <div class="art-right-side">
-                                <span class="art-date">Aug 2019 - Present(Expected July 2023)</span>
-                              </div>
-                            </div>
-                            <!-- <ul>
-                              <li> -->
-                            <p>
-                              KVG College of Engineering, Sullia
-                            </p>
-                            <!-- </li>
-                            </ul> -->
-                          </div>
-                        </div>
-                        <!-- timeline item end -->
-                        <!-- timeline item start -->
-                        <div class="art-timeline-item">
-                          <div class="art-timeline-mark-light"></div>
-                          <div class="art-timeline-mark"></div>
-
-                          <div class="art-a art-timeline-content">
-                            <div class="art-card-header">
-                              <div class="art-left-side">
-                                <h5>XII (NON-CBSE)</h5>
-                                <div class="art-el-suptitle mb-15"></div>
-                              </div>
-                              <div class="art-right-side">
-                                <span class="art-date">2019</span>
-                              </div>
-                            </div>
-                            <!-- <ul>
-                              <li> -->
-                            <p>
-                              Nehru Memorial College, Sul
-                            </p>
-                            <!-- </li>
-                            </ul> -->
-                          </div>
-                        </div>
-                        <!-- timeline item end -->
-                        <!-- timeline item start -->
-                        <div class="art-timeline-item">
-                          <div class="art-timeline-mark-light"></div>
-                          <div class="art-timeline-mark"></div>
-
-                          <div class="art-a art-timeline-content">
-                            <div class="art-card-header">
-                              <div class="art-left-side">
-                                <h5>X (NON-CBSE)</h5>
-                                <div class="art-el-suptitle mb-15"></div>
-                              </div>
-                              <div class="art-right-side">
-                                <span class="art-date">2017</span>
-                              </div>
-                            </div>
-                            <!-- <ul>
-                              <li> -->
-                            <p>
-                              KVG English Medium High School, Sullia
-                            </p>
-                            <!-- </li>
-                            </ul> -->
-                          </div>
-                        </div>
-                        <!-- timeline item end -->
-
+                      
                       </div>
                       <!-- timeline end -->
 
@@ -978,8 +940,6 @@
                           <!-- popup end -->
 
                         </div>
-
-
 
 
 
