--- a/index.html
+++ b/index.html
@@ -439,6 +439,36 @@
                     <!-- col end -->
 
                   </div>
+
+                  <div class="row">
+                    <div class="card" style="width: 18rem; background-color:transparent">
+                      <div id="carouselExample" class="carousel slide">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="..." class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <!-- <span class="visually-hidden">Previous</span> -->
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <!-- <span class="visually-hidden">Next</span> -->
+                        </button>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
                   <!-- row end -->
 
                 </div>
