updated dental image

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                             style="height: 75%;">
                             <div class="carousel-inner">
                               <div class="carousel-item active" data-bs-interval="3000">
-                                <img src="img\projects\examination\1.png" class="d-block w-100" alt="...">
+                                <img src="img\projects\noImage\1.jpg" class="d-block w-100" alt="...">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button"
