--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                             <h5 class="card-title">Dhiraagu Pay</h5>
                             <h6 class="card-subtitle mb-2">Flutter application</h6>
                             <p class="card-text">Built an MFS application with flutter using the perl APIs, used
-                              json-dynamic-widget to make the screens dynamic.
+                              json_dynamic_widget to make the screens dynamic.
                             </p>
                           </div>
                         </div>
@@ -462,8 +462,8 @@
                           <div class="card-body">
                             <h5 class="card-title">API</h5>
                             <h6 class="card-subtitle mb-2">Express JS</h6>
-                            <p class="card-text">Built an express API that returns json Pages from the folder requested,
-                              implementing methods to create the dynamic functionalities functionalities.
+                            <p class="card-text">Built an express API that returns JSON Pages from the folder requested,
+                              implementing methods to create the dynamic functionalities.
                             </p>
                           </div>
                         </div>
@@ -475,7 +475,7 @@
                             <h5 class="card-title">Charging Module for Roaming</h5>
                             <h6 class="card-subtitle mb-2">Spring boot application</h6>
                             <p class="card-text">Spring boot application that handles charging for the roaming requests
-                              from the client, used jDiameter open-source library.
+                              from the client, uses jDiameter open-source library.
                             </p>
                           </div>
                         </div>
