--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
               <div class="art-links-frame p-15-15">
 
                 <!-- download cv button -->
-                <a href="/files/Jeevan P Rai.pdf" class="art-link" download data-no-swup
+                <a href="/files/Jeevan_P_Rai.pdf" class="art-link" download data-no-swup
                   style="font-size: 15px;">Download Resume <i class="fas fa-download"></i></a>
 
               </div>
